--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </ul>
                         <div class="header__logo">
                             <a href="index.html" class="header__logo-link">
-                                <img src="./assets/img/logo-nano.png" alt="" class="header__logo-img">
+                                <img src="./assets/img/logo-iq.png" alt="" class="header__logo-img">
                             </a>
                         </div>
                         <ul class="header__navbar-list hide-on-mobi-tab">
@@ -535,7 +535,7 @@
                     <div class="col l-3 mm-6 c-12">
                         <div class="footer__logo">
                             <a href="index.html" class="footer__logo-link">
-                                <img src="./assets/img/logo-nano.png" alt="" class="footer__logo-img text-select">
+                                <img src="./assets/img/logo-iq.png" alt="" class="footer__logo-img text-select">
                             </a>
                         </div>
                         <p class="footer__sub-title text-select">
